#################################################
#
#  (C) 2012 Serghei Amelian
#  serghei (DOT) amelian (AT) gmail.com
#
#  Improvements and feedback are welcome
#
#  This file is released under GPL >= 2
#
#################################################

install( FILES
    COPYING README lyrics_astraweb.rb lyrics_astraweb.spec
  DESTINATION ${DATA_INSTALL_DIR}/amarok/scripts/lyrics_astraweb )
