#################################################
#
#  (C) 2012 Serghei Amelian
#  serghei (DOT) amelian (AT) gmail.com
#
#  Improvements and feedback are welcome
#
#  This file is released under GPL >= 2
#
#################################################

install( FILES
    background.png transparency.png
  DESTINATION ${DATA_INSTALL_DIR}/amarok/themes/reinhardt/images )
